feat(clouddriver-aws): migrate SNS, SQS, SWF, Support, CloudFormation to AWS SDK v2
Phase 1 of the AWS SDK v1 → v2 migration for clouddriver-aws.
Part of spinnaker/spinnaker#7699

Services migrated:
- AmazonSNS → SnsClient
- AmazonSQS → SqsClient
- AmazonSimpleWorkflow (SWF) → SwfClient
- AWSSupport → SupportClient
- AmazonCloudFormation → CloudFormationClient

Changes:
- Add v2 SDK dependencies (cloudformation, sns, sqs, support, swf,
  iam-policy-builder)
- Add v2 client getters to AmazonClientProvider
- Migrate InstanceTerminationLifecycleWorker and
  LaunchFailureNotificationAgent to v2 SNS/SQS clients and v2 IAM
  policy builder
- Migrate all CloudFormation atomic operations and caching agent to v2
- Convert CloudFormation Change objects to plain maps for Jackson
  serialization (v2 SDK models are not Jackson-serializable)
- Remove v1 getters and imports for migrated services
- Rewrite all affected test specs to use v2 client mocks

Note: Shield migration deferred to Phase 3 (callers are in ELB
upsert operations which are Phase 3 scope).